[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/04B_30__.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Main Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = -7.0
margin_right = 644.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "The Platformer With Squares In It"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = -16.0
margin_top = 139.0
margin_right = 644.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 1 )
text = "See ya"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = -10.0
margin_top = 73.0
margin_right = 650.0
margin_bottom = 150.0
custom_colors/font_color = Color( 0.466667, 0.4, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "(The unfinished peice of garbage)"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 210.0
margin_top = 253.0
margin_right = 404.0
margin_bottom = 288.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="Button2" type="Button" parent="."]
margin_left = 210.0
margin_top = 304.0
margin_right = 404.0
margin_bottom = 339.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Information"

[node name="Button3" type="Button" parent="."]
margin_left = 210.0
margin_top = 359.0
margin_right = 404.0
margin_bottom = 394.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
